<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn_lbl">Login</string>
    <string name="registertxtView_lbl">Not yet registerd </string>
    <string name="register_btn_lbl">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hint_name_fld">First name</string>
    <string name="hint_lname_fld">Last name</string>
    <string name="hint_email_fld">Email</string>
    <string name="hint_phnum_fld">Phone number</string>
    <string name="hint_password_fld">Password</string>
    <string name="hint_rpassword_fld">Repeat Password</string>
    <string name="title_activity_manager_menu">ManagerMenuActivity</string>
    <string name="title_activity_empl_menu">EmplMenuActivity</string>
    <string name="project_btn_lbl">Projects</string>
    <string name="task_btn_lbl">My tasks</string>
    <string name="reports_btn_lbl">Reports</string>
    <string name="members_btn_lbl">Members</string>
    <string name="title_activity_projects_list">ProjectsList</string>
    <string name="add_btn_lbl">Add Project</string>
    <string name="project_textview_lbl">Project name</string>
    <string name="project_date_txtvw_lbl">Date of creation</string>
    <string name="project_type_txtvw_lbl">Type</string>
    <string name="test">test</string>
    <string name="title_activity_add_project">AddProject</string>
    <string name="btnPickDate_lbl">Pick Date</string>
    <string name="btnChooseMem_lbl">Choose member</string>
    <string name="btnAddTask_lbl">Add task</string>
    <string name="dateView_lbl">Completion date</string>
    <string name="hint_projectName_fld">Project name</string>
    <string name="hint_description_fld">Project description</string>
    <string name="hint_typeOfProj_fld">Type of project</string>
    <string name="btnpickDate_lbl">Pick</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="priority_prompt">choose priority</string>
    <string name="memberListForProject_lbl">List of members</string>
    <string name="btnAddAnotherTask">Add another task</string>
    <string name="projectDescTxtvw">Description</string>
    <string name="add_btn_lbl1">Update</string>
    <string name="projComplTxtvw_lbl">Compl.date</string>

    <string-array name="priority_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_member_list">Member List</string>
    <string name="title_activity_member_detail">Member Detail</string>
    <string name="emplname_lbl">First name</string>
    <string name="lastnametxtvw_lbl">Last name</string>
    <string name="emailtxtvw_lbl">Email</string>
    <string name="phonetxtvw_lbl">Phone</string>
    <string name="title_activity_project_detail">Project Detail</string>
    <string name="title_activity_choose_member_list">Choose Member List</string>
    <string name="title_activity_choose_member">Choose Member</string>
    <string name="hint_taskname_fld">Task name</string>
    <string name="hint_taskDescription_fld">Task Description</string>
    <string name="setPrioritytxtvw_lbl">Set priority</string>
    <string name="selectMember_txtvw_lbl">Select member from list</string>
    <string name="selectedMembers_lbl">Selected members for task</string>
    <string name="btnSubmit_lbl">Submit</string>
    <string name="btnReport_lbl">View reports</string>
    <string name="btnViewTasks_lbl">View Tasks</string>
    <string name="title_activity_task_list_view">Task List</string>
    <string name="taskNameTxtvw_lbl">Task name</string>
    <string name="statusTxtvw_lbl">Status</string>
    <string name="title_activity_my_tasks">My Tasks</string>
    <string name="title_activity_task_detail">Task Detail</string>
    <string name="taskDesctxtvw_lbl">Description</string>
    <string name="title_activity_add_task_online">AddTask</string>
    <string name="btnEditProject_lbl">Edit project</string>
    <string name="title_activity_edit_project">Edit Project</string>
    <string name="btnEditTask_lbl">Update status</string>
    <string name="heading_dismissable_list_view">List View</string>

</resources>
