<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uttara.gtmanager.TaskDetail" >

    <TextView
        android:id="@+id/statusTxtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_date_txtvw"
        android:layout_below="@+id/project_date_txtvw"
        android:layout_marginTop="39dp"
        android:text="@string/statusTxtvw_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/project_name_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskDesctxtvw"
        android:layout_below="@+id/taskDesctxtvw"
        android:layout_marginTop="35dp"
        android:text="@string/project_textview_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/taskDesctxtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskNameTxtvw"
        android:layout_below="@+id/taskNameTxtvw"
        android:layout_marginTop="40dp"
        android:text="@string/taskDesctxtvw_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/taskNameTxtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:text="@string/taskNameTxtvw_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/project_date_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_name_txtvw"
        android:layout_centerVertical="true"
        android:text="@string/project_date_txtvw_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnEditTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statusTxtvw"
        android:layout_below="@+id/statusTxtvw"
        android:layout_marginTop="49dp"
        android:text="@string/btnEditTask_lbl"
        android:onClick="updateStatus" />

</RelativeLayout>
