<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uttara.gtmanager.MainActivity"
    android:background="@drawable/background" >

    <EditText
        android:id="@+id/email_fld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/register_btn"
        android:layout_alignEnd="@+id/register_btn"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textEmailAddress" 
        android:hint="@string/hint_email_fld"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/register_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/registertxtView"
        android:layout_alignRight="@+id/login_btn"
        android:onClick="register"
        android:text="@string/register_btn_lbl" />

    <TextView
        android:id="@+id/registertxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn"
        android:layout_below="@+id/login_btn"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="60dp"
        android:text="@string/registertxtView_lbl" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_fld"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="login"
        android:text="@string/login_btn_lbl" />

    <EditText
        android:id="@+id/password_fld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     
        android:layout_alignLeft="@+id/email_fld"
        android:layout_below="@+id/email_fld"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/hint_password_fld"
        android:inputType="textPassword"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp" />

</RelativeLayout>