<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uttara.gtmanager.ManagerMenuActivity" >

    <Button
        android:id="@+id/projects_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/project_btn_lbl" 
        android:onClick="projectsMenu"/>

    <Button
        android:id="@+id/reports_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/members_btn"
        android:layout_alignStart="@+id/members_btn"
        android:layout_below="@+id/members_btn"
        android:layout_marginTop="19dp"
        android:text="@string/reports_btn_lbl" 
        android:onClick="reportsMenu"/>

    <Button
        android:id="@+id/members_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/projects_btn"
        android:layout_alignStart="@+id/projects_btn"
        android:layout_below="@+id/projects_btn"
        android:layout_marginTop="20dp"
        android:text="@string/members_btn_lbl"
        android:onClick="membersList" />

    <Button
        android:id="@+id/tasks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reports_btn"
        android:layout_alignStart="@+id/members_btn"
        android:layout_below="@+id/reports_btn"
        android:layout_marginTop="23dp"
        android:text="@string/task_btn_lbl" 
        android:onClick="taskMenu"/>
		
</RelativeLayout>
