<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/project_name_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/project_textview_lbl" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/project_name_txtvw"
        android:layout_alignBottom="@+id/project_name_txtvw"
        android:layout_centerHorizontal="true"
        android:text="@string/test" />

    <TextView
        android:id="@+id/project_type_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_date_txtvw"
        android:layout_below="@+id/project_date_txtvw"
        android:text="@string/project_type_txtvw_lbl" />

    <TextView
        android:id="@+id/project_date_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_name_txtvw"
        android:layout_below="@+id/project_name_txtvw"
        android:text="@string/project_date_txtvw_lbl" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/test" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/project_type_txtvw"
        android:layout_alignBottom="@+id/project_type_txtvw"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/test" />

</RelativeLayout>
