<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uttara.gtmanager.ProjectDetailActivity" >

    <TextView
        android:id="@+id/project_name_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/project_textview_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/project_date_txtvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/project_name_txtvw"
        android:layout_below="@+id/project_name_txtvw"
        android:layout_marginTop="16dp"
        android:text="@string/project_date_txtvw_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/projdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/project_date_txtvw"
        android:layout_alignBottom="@+id/project_date_txtvw"
        android:layout_alignLeft="@+id/projname"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/memberNameListView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignRight="@+id/projdate"
        android:layout_below="@+id/memberListForProject" >
    </ListView>

    <TextView
        android:id="@+id/memberListForProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projdate"
        android:layout_marginTop="20dp"
        android:text="@string/memberListForProject_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnViewTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/memberNameListView"
        android:layout_alignRight="@+id/memberNameListView"
        android:layout_below="@+id/memberNameListView"
        android:layout_marginTop="20dp"
        android:text="@string/btnViewTasks_lbl" 
        android:onClick="viewTasks"/>

    <TextView
        android:id="@+id/projname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/project_date_txtvw"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/memberListForProject"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnViewTasks"
        android:layout_alignRight="@+id/btnViewTasks"
        android:layout_below="@+id/btnViewTasks"
        android:layout_marginTop="15dp"
        android:text="@string/btnAddTask_lbl" 
        android:onClick="addTaskOnline"/>

    <Button
        android:id="@+id/btnReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_btn"
        android:layout_alignRight="@+id/add_btn"
        android:layout_below="@+id/add_btn"
        android:layout_marginTop="15dp"
        android:text="@string/btnReport_lbl" />

</RelativeLayout>
